src/cli/snapshots/mob_rs__cli__tests__parse_pr.snap
---
source: src/cli/tests.rs
expression: cli
---
Cli {
    global: GlobalOptions {
        inis: [],
        dry: false,
        log_level: None,
        file_log_level: None,
        log_file: None,
        prefix: None,
        options: [],
        no_default_inis: false,
    },
    command: Some(
        Pr(
            PrArgs {
                github_token: None,
                operation: Find,
                pr: "modorganizer/123",
            },
        ),
    ),
}
